2020-07-11  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdev.c, pdfdoc.c, pdfdraw.[ch], pdfobj.[ch], spc_pdfm.c:
	ExtGState can be manipulated with a dedicated stack.
	Add new specials pdf:bxgstate and pdf:exgstate to push/pop
	ExtGState into/from the stack.
	* pdfcolor.c: Fix a bug that assignment was missing
	in pdf_color_compare().
	* configure.ac: Version 20200711.

2020-07-04  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfcolor.c, spc_util.c: Fix a bug in pdfcolor.c.
	Add initialization of a variable and NULL pointer check.
	* configure.ac: Version 20200704.

2020-07-02  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdoc.c, spc_pdfm.c: Possible fix for a bug that pdf:btrans
	inside pdf:bcontent and pdf:econtent does not work correctly.
	Extend pdf:bann to accept a reference ID which can be used
	later to refer the annotation dictionary object. When
	line-breaks occur, it just points to the first annotation
	dictionary of the line-breaking annotation series.

2020-06-28  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvi.[ch], spc_dvipdfmx.c, spc_pdfm.c, specials.[ch]: Two new
	special commands added as workarounds for \phantom text issue
	in creating annotation (link). "pdf:xann" which extends the
	current annotation area by a specified amount.
	"dvipdfmx:catch_phantom" to control the behavior of dvipdfmx,
	when this is set to true, then dvipdfmx extends the annotation
	area when it encounters "horizontal movement" such as DVI
	"right". Optionally height and depth of such area can be
	specified (default: current font size for height and depth 0).
	* pdfcolor.c: Change prefix for ColorSpace resource name to "XC".
	* pdfdoc.c: Add missing release object.

2020-06-27  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfcolor.[ch], pdfdoc.c, pdfdraw.c, spc_util.c: An extension
	to the color support. All color-spaces can be supported (only
	for pdf: color commands). ColorSpace can be specified by a